--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<version>1.1-R4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>Vault</artifactId>
+			<version>1.2.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
