--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.philworld.bukkit.magicsigns</groupId>
 	<artifactId>MagicSigns</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-beta1</version>
 	<name>MagicSigns</name>
 	<description>	</description>
 
