--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.philworld.bukkit.magicsigns</groupId>
 	<artifactId>MagicSigns</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.1</version>
 	<name>MagicSigns</name>
 	<description>	</description>
 
@@ -16,15 +16,15 @@
 			<id>Bukkit Official</id>
 			<url>http://repo.bukkit.org/content/repositories/public</url>
 		</repository>
-
+		
 		<repository>
-			<id>milkbowl-repo</id>
-			<url>http://ci.milkbowl.net/plugin/repository/everything/</url>
+			<id>zml-repo</id>
+			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
 
 		<repository>
-			<id>zml-repo</id>
-			<url>http://files.zachsthings.com/repo</url>
+			<id>herocraftonline-repo</id>
+			<url>http://ci.herocraftonline.com/plugin/repository/everything/</url>
 		</repository>
 
 	</repositories>
@@ -36,19 +36,19 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.2.5-R0.1</version>
+			<version>1.3.1-R2.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldedit</artifactId>
-			<version>5.3</version>
+			<version>5.4.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1.2.16-SNAPSHOT</version>
+			<version>1.2.18-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
