--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,14 @@
 	<artifactId>MagicSigns</artifactId>
 	<version>1.2.1</version>
 	<name>MagicSigns</name>
-	<description>	</description>
+	<description>MagicSigns is a Bukkit plugin that adds interactive signs.</description>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License 3.0</name>
+			<url>LICENSE.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,7 +25,7 @@
 		</repository>
 
 		<repository>
-			<id>zml-repo</id>
+			<id>sk89q-repo</id>
 			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
 
@@ -40,19 +47,19 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.3.1-R2.0</version>
+			<version>1.4.5-R0.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldedit</artifactId>
-			<version>5.4.2</version>
+			<version>5.4.5</version>
 		</dependency>
 
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1.2.18-SNAPSHOT</version>
+			<version>1.2.21-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -82,8 +89,8 @@
 			<!-- Replacer plugin for the version -->
 			<plugin>
 				<groupId>com.google.code.maven-replacer-plugin</groupId>
-				<artifactId>maven-replacer-plugin</artifactId>
-				<version>1.3.8</version>
+				<artifactId>replacer</artifactId>
+				<version>1.5.2</version>
 				<executions>
 					<execution>
 						<phase>prepare-package</phase>
@@ -117,7 +124,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>1.6</version>
+				<version>2.0</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
