--- a/pom.xml
+++ b/pom.xml
@@ -48,18 +48,23 @@
 	<!-- Dependencies -->
 	<dependencies>
 
-		<!-- Bukkit -->
+		<dependency>
+			<groupId>org.mcstats.bukkit</groupId>
+			<artifactId>metrics-lite</artifactId>
+			<version>R6</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sk89q</groupId>
+			<artifactId>worldedit</artifactId>
+			<version>5.5.5</version>
+		</dependency>		
+
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
 			<version>1.4.7-R1.0</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sk89q</groupId>
-			<artifactId>worldedit</artifactId>
-			<version>5.5.5</version>
 		</dependency>
 
 		<dependency>
@@ -70,9 +75,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mcstats.bukkit</groupId>
-			<artifactId>metrics-lite</artifactId>
-			<version>R6</version>
+			<groupId>org.getspout</groupId>
+			<artifactId>spoutplugin</artifactId>
+			<version>1.5.1-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -88,13 +94,14 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
-			<groupId>org.getspout</groupId>
-			<artifactId>spoutplugin</artifactId>
-			<version>1.5.1-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>1.5</version>
+			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
